@@ -1,4 +1,4 @@
-FROM golang:1.10.3
+FROM golang:1.10.6
 MAINTAINER Pier-Hugues Pellerin <ph@elastic.co>
 
 RUN set -x && \
